# kanizawa_sensei_bot

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  todo.md
docs/csharp/: arrays.md  condicionales.md  constantes.md  enum.md  for.md  funciones.md  generics.md  metodos.md  operadores.md  return.md  string.md  struct.md  tipos_de_datos.md  variables.md  while.md
docs/python/: objetos.md  operadores_aritmeticos.md  tipos.md  todo_es_un_objeto.md  variables.md  zen.md
docs/rust/: arrays.md  async.md  closures.md  condicionales.md  constantes.md  enum.md  for.md  generics.md  iterators.md  let_else.md  lifetimes.md  loop.md  macros.md  metodos.md  option.md  ownership.md  result.md  shadowing.md  slices.md  struct.md  tuplas.md  variables.md  vectores.md
src/: enums.rs  error.rs  main.rs  prelude.rs
src/commands/: mod.rs
src/commands/admin/: ban.rs  mod.rs  mute.rs  unban.rs  unmute.rs
src/commands/common/: mod.rs
src/commands/fun/: mod.rs
src/handlers/: buttons.rs  chat_member_updates.rs  command.rs  mod.rs
src/utils/: db.rs  mod.rs
