[package]
name = "kanizawa_sensei_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
teloxide-core = "0.9.1"
log = "0.4.17"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.21.2", features = ["full"] }
dotenv= "0.15.0"
rand = "0.8.5"
mongodb = "2.3.1"
reqwest = "0.11.13"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
nekosbest = "0.17.0"
lazy_static = "1.4.0"
anyhow = "1.0.72"
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
once_cell = "1.18.0"
chrono = "0.4.31"
async-trait = "0.1.74"