[package]
name = "kanizawa_sensei_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
teloxide-core = "0.9.1"
log = "0.4.17"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.21.2", features = ["full"] }
dotenv= "0.15.0"
reqwest = "0.11.13"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
nekosbest = "0.20.1"
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
once_cell = "1.18.0"